chore: update for 4.31

--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
       components
     </title>
   </head>
+  <!-- @@Start(body) -->
   <body>
+    <!-- @@Start(calcite-shell) -->
     <calcite-shell>
       <calcite-navigation slot="header">
         <calcite-navigation-logo slot="logo" />
       </calcite-navigation>
+      <!-- @@Start(arcgis-map) -->
       <arcgis-map item-id="e691172598f04ea8881cd2a4adaa45ba" zoom="4">
         <arcgis-layer-list position="top-right" />
       </arcgis-map>
+      <!-- @@End(arcgis-map) -->
     </calcite-shell>
-
+    <!-- @@End(calcite-shell) -->
     <script type="module" src="/main.js"></script>
   </body>
+  <!-- @@End(body) -->
 </html>
